--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -73,11 +73,11 @@
         <hr>
         <div id="contactList" class="my-5 mx-4">
             <div id="topContactList" class="align-items-center text-white">
-                <p class="text-center">Nome</p>
-                <p class="text-center">Data de nascimento</p>
-                <p class="text-center">E-mail</p>
-                <p class="text-center">Celular para contato</p>
-                <p class="text-center">Ações</p>
+                <p class="text-center m-2">Nome</p>
+                <p class="text-center m-2">Data de nascimento</p>
+                <p class="text-center m-2">E-mail</p>
+                <p class="text-center m-2">Celular para contato</p>
+                <p class="text-center m-2">Ações</p>
             </div>
         </div>
     </main>
@@ -85,10 +85,10 @@
         <a href="#" class="text-decoration-none text-white">
             Termos | Políticas
         </a>
-        <p class="d-flex align-items-center">&copy; Copyright 2022 | Desenvolvido por <img
+        <p class="d-flex align-items-center m-0">&copy; Copyright 2022 | Desenvolvido por <img
                 src="./src/logo_rodape_alphacode.png" alt="logotipo alphacode">
         </p>
-        <p class="d-flex align-items-center">&copy; Alphacode IT Solutions 2022</p>
+        <p class="d-flex align-items-center m-0">&copy; Alphacode IT Solutions 2022</p>
 
     </footer>
 
